objects/Pizza__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pizza</relationshipLabel>
        <relationshipName>Pizza</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Ordered_Date__c</fullName>
        <label>Last_Ordered_Date</label>
        <summarizedField>Pizza_Order_Item__c.CreatedDate</summarizedField>
        <summaryForeignKey>Pizza_Order_Item__c.Pizza__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pizza</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pizza Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pizza</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>